# field_access

./: .release-please-manifest.json  CHANGELOG.md  Cargo.toml  README.md  release-please-config.json
.github/: renovate.json5
.github/scripts/: cargo-release
.github/workflows/: ci.yml  release-please.yml  release-plz.yml  renovate.yml
derive/: CHANGELOG.md  Cargo.toml  README.md
derive/src/: expand.rs  lib.rs
src/: lib.rs  macros.rs
tests/: test_attrs.rs  test_basic.rs  test_conversions.rs
tests/ui/: enum.rs  enum.stderr  generic.rs  generic.stderr  non-static-lifetime.rs  non-static-lifetime.stderr  union.rs  union.stderr
