[workspace]
resolver = "2"
members = ["derive"]

[workspace.package]
license = "MIT OR Apache-2.0"
edition = "2021"
rust-version = "1.65.0"  # MSRV
include = [
  "build.rs",
  "src/**/*",
  "Cargo.toml",
  "Cargo.lock",
  "LICENSE*",
  "README.md",
  "benches/**/*",
  "examples/**/*"
]

[package]
name = "field_access"
version = "0.0.1"
description = "Dynamically access struct fields"
categories = ["data-structures"]
keywords = ["struct", "field", "access", "field-access"]
license.workspace = true
edition.workspace = true
rust-version.workspace = true
include.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["std"]
alloc = []
std = ["alloc"]

[dependencies]
field_access_derive = { version = "=0.0.1", path = "derive" }
paste = "1.0.14"

[dev-dependencies]
trybuild = { version = "1.0.81", features = ["diff"] }
