[package]
name = "field_access_derive"
version = "0.1.10"
description = "Derive macro for the field_access crate"
documentation = "https://docs.rs/field_access_derive/"
categories = ["data-structures"]
keywords = ["struct", "field", "access", "field-access"]
repository.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
include.workspace = true

[lib]
proc-macro = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
proc-macro2 = "1.0.86"
quote = "1.0.37"
syn = "2.0.87"
